@@ -155,6 +155,19 @@ else {
 						</td>
 					</tr>
 					<tr>
+						<td> 
+							<b><?php print _('Order') ?></b><br/>
+							<span style="font-size: 90%"><i><?php print _('May be used to adjust arrangement of courses in reports.') ?></i></span>
+						</td>
+						<td class="right">
+							<input name="orderBy" id="orderBy" maxlength=6 value="" type="text" style="width: 300px">
+							<script type="text/javascript">
+								var orderBy=new LiveValidation('orderBy');
+								orderBy.add(Validate.Numericality);
+							</script>
+						</td>
+					</tr>
+					<tr>
 						<td colspan=2> 
 							<b><?php print _('Blurb') ?></b> 
 							<?php print getEditor($guid,  TRUE, "description", "", 20 ) ?>
