@@ -43,6 +43,7 @@ else {
 }
 $name=$_POST["name"] ;
 $nameShort=$_POST["nameShort"] ;
+$orderBy=$_POST["orderBy"] ;
 $description=$_POST["description"] ;
 $gibbonSchoolYearID=$_POST["gibbonSchoolYearID"] ;
 $count=$_POST["count"] ;
@@ -94,8 +95,8 @@ else {
 		else {	
 			//Write to database
 			try {
-				$data=array("gibbonDepartmentID"=>$gibbonDepartmentID, "gibbonSchoolYearID"=>$gibbonSchoolYearID, "name"=>$name, "nameShort"=>$nameShort, "description"=>$description, "gibbonYearGroupIDList"=>$gibbonYearGroupIDList); 
-				$sql="INSERT INTO gibbonCourse SET gibbonDepartmentID=:gibbonDepartmentID, gibbonSchoolYearID=:gibbonSchoolYearID, name=:name, nameShort=:nameShort, description=:description, gibbonYearGroupIDList=:gibbonYearGroupIDList" ;
+				$data=array("gibbonDepartmentID"=>$gibbonDepartmentID, "gibbonSchoolYearID"=>$gibbonSchoolYearID, "name"=>$name, "nameShort"=>$nameShort, "orderBy"=>$orderBy, "description"=>$description, "gibbonYearGroupIDList"=>$gibbonYearGroupIDList); 
+				$sql="INSERT INTO gibbonCourse SET gibbonDepartmentID=:gibbonDepartmentID, gibbonSchoolYearID=:gibbonSchoolYearID, name=:name, nameShort=:nameShort, orderBy=:orderBy, description=:description, gibbonYearGroupIDList=:gibbonYearGroupIDList" ;
 				$result=$connection2->prepare($sql);
 				$result->execute($data);
 			}
